Adiciona rotas do Swagger
